--- a/src/openapi/security.yml
+++ b/src/openapi/security.yml
@@ -2,6 +2,9 @@ apiKey:
   type: apiKey
   name: Authorization
   in: header
-bearerAuth:
+
+
+BearerAuth:
   type: http
   scheme: bearer
+  bearerFormat: JWT
