--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.24.0",
     "dotenv": "^16.3.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.0.2"
   },
   "dependencies": {
@@ -30,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   }
