--- a/src/openapi/paths.yml
+++ b/src/openapi/paths.yml
@@ -32,7 +32,7 @@
                   type: string
                   description: Authentication token
       '401':
-        description: Unauthorized, invalid credentials
+        description: '#/components/responses/Unauthorized'
 
 /appointments:
   get:
@@ -49,7 +49,7 @@
             schema:
               type: array
               items:
-                $ref: '#/components/schemas/Appointment'
+                $ref: OK
   post:
     summary: Create a new appointment
     tags:
