--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 node_modules/
-dist/
-coverage/
 
+.vscode/*
+!.vscode/launch.json
+
+coverage
+
+.nyc_output
+.scannerwork
 
 .package-lock.json
 .env*
